--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='UTF-8'><meta name="robots" content="noindex">
-<title>文字翻滚</title>
+<title>sosowei</title>
 
 <style class="cp-pen-styles">
 body { background-color: #0096D6; }
